--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "rap2hpoutre/fast-excel": "^5.4",
         "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
